# test_task_canalservice

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  run.py
config/: settings.py
secrets/: db.json
services/: api_client.py  cbr.py  db.py  gsheets.py
